--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,9 +1,8 @@
 # Ignore Gradle project-specific cache directory
-.gradle
+app/.gradle
 
 # Ignore Gradle build output directory
 build
-
 **/logs/
 .settings
 bin
@@ -56,4 +55,4 @@ bin/
 .DS_Store
 
 # Ignore the asciinema rec
-.cast
+*.cast
