--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           java-version: 21
           distribution: 'zulu' # Alternative distribution options are available
+      - name: Check directory structure
+        run: |
+          pwd
+          ls -l
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
